<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">music game4</string>
    <string name="action_settings">Settings</string>
    <string name="b_button">BD</string>
    <string name="s_button">Snare</string>
    <string name="h_button">Hihat</string>
    <string name="ho_button">Open</string>
    <string name="c_button">Clap</string>
    <string name="riff_button">Bline</string>

</resources>
